--- a/server/build.gradle
+++ b/server/build.gradle
@@ -10,11 +10,14 @@ repositories {
 }
 
 dependencies {
-    compile("io.grpc:grpc-netty:1.25.0")
-    compile("io.grpc:grpc-protobuf:1.25.0")
-    compile("io.grpc:grpc-stub:1.25.0")
+    compile 'io.grpc:grpc-netty:1.25.0'
+    compile 'io.grpc:grpc-protobuf:1.25.0'
+    compile 'io.grpc:grpc-stub:1.25.0'
+
+    compile 'org.mongodb:mongodb-driver:3.4.3'
+    
     // Java 11+
-    compileOnly("javax.annotation:javax.annotation-api:1.3.2")
+    compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
     testCompile 'junit:junit:4.12'
 }
 
